--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "mtiennnnn's Blog"
 bye_message: "Bye!"
-baseurl: "/"
+baseurl: "/mtiennnnn"
 url: "https://mtiennnnn.github.io"
 disqus: mtiennnnn
 
