--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "mtiennnnn's Blog"
 bye_message: "Bye!"
-baseurl: "/mtiennnnn"
+baseurl: "/mtiennnnn/"
 url: "https://mtiennnnn.github.io"
 disqus: mtiennnnn
 
@@ -10,7 +10,6 @@ nick: "mtiennnnn"
 source_code:
     server: "github.com"
     nick: "mtiennnnn"
-fingerprint_key: 
 
 # Build settings
 markdown: kramdown
