--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "mtiennnnn's Blog"
+title: "mtiennnnn"
 bye_message: "Bye!"
 baseurl: "/mtiennnnn/"
 url: "https://mtiennnnn.github.io"
